data/derived/fa15/progs/unify/prog1616.ml.out
Characters 66-79:
  else let x= n mod 10 in digitsOfInt n::x;;
                          ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
